Before connection the movie,movieInfo and actorInfo

--- a/force-app/main/default/classes/MovieController.cls
+++ b/force-app/main/default/classes/MovieController.cls
@@ -1,9 +1,9 @@
 public with sharing class MovieController {
     @AuraEnabled
-    public static List<Film__c> getMovies(){
+    public static List<Film__c> getMovies(Integer offset){
         return [select id, Name, Original_Title__c, Original_Language__c, Genre__c,
-                         Overview__c, PosterURL__c, Release_Date__c, Runtime_Minutes__c
+                         Overview__c, PosterURL__c, Release_Date__c, Runtime_Minutes__c, Tagline__c
                 from Film__c
-                limit 9];
+                limit 9 offset :offset];
     }
 }
